# BmpToVox

./: .gitignore  BmpToVox.sln  BmpToVox.vcxproj  BmpToVox.vcxproj.filters  CMakeLists.txt  README.md  VertPool.cpp  VertPool.h  main.cpp
easybmp/: EasyBMP.cpp
